# beautiful-atoms

./: .gitignore  blender_manifest.toml  pyproject.toml
.github/workflows/: build_extension.yml
batoms_proxy/: README.md  pyproject.toml
batoms_proxy/batoms/: __init__.py
scripts/: build_extension.py
