[build-system]
requires = [ "setuptools", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "batoms"
version = "2.3.0"
description = "A Python package for creating, editing, and rendering atoms and molecules structures using Blender."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "ase>=3.23.0", "scipy>=1.14.0", "scikit-image>=0.24.0", "spglib>=2.5.0", "pymatgen", "openbabel-wheel>=3.0.0",]
[[project.authors]]
name = "Beautiful Atoms Team"
email = "xing.wang@gmail.com"

[project.license]
text = "GPL-3.0-or-later"

[project.urls]
Documentation = "https://beautiful-atoms.readthedocs.io/en/latest/index.html"
Source = "https://github.com/beautiful-atoms/beautiful-atoms"

[project.optional-dependencies]
pre-commit = [ "pre-commit~=2.2", "pylint~=2.17.4",]
dev = [ "toml",]
tests = [ "pytest~=7.0", "pytest-cov~=2.7,<2.11",]
blender-extension = [ "autopep8==2.3.1", "certifi==2021.10.8", "charset-normalizer==2.0.10", "Cython==0.29.30", "idna==3.3", "numpy==1.24.3", "pycodestyle==2.12.1", "requests==2.27.1", "toml==0.10.2", "urllib3==1.26.8", "zstandard==0.16.0",]

[project.entry-points]

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "batoms*",]
