[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "batoms-proxy"
version = "2.3.0"
description = "Blender extension proxy for batoms"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [
{ name = "Beautiful Atoms Team", email = "xing.wang@gmail.com" }
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
batoms = ["__init__.py"]
